aiffdec: fix bits per sample

Fixes Ticket1660

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>